extends Control

# ‡πÉ‡∏ä‡πâ % ‡∏´‡∏£‡∏∑‡∏≠ Path ‡∏ó‡∏µ‡πà‡∏ñ‡∏π‡∏Å‡∏ï‡πâ‡∏≠‡∏á‡πÄ‡∏û‡∏∑‡πà‡∏≠‡∏≠‡πâ‡∏≤‡∏á‡∏≠‡∏¥‡∏á‡πÇ‡∏´‡∏ô‡∏î
@onready var main_buttons = %VBoxContainer
@onready var options_panel = %OptionPanel
@onready var sound_slider = $OptionPanel/VBoxContainer/HSlider
@onready var audio_click = $AudioClick
@onready var percent_label = $OptionPanel/VBoxContainer/percentsound
func _ready() -> void:
	# ... ‡πÇ‡∏Ñ‡πâ‡∏î‡πÄ‡∏î‡∏¥‡∏° ...
	if sound_slider:
		sound_slider.value = 0.5
		# ‡πÄ‡∏£‡∏µ‡∏¢‡∏Å‡∏ü‡∏±‡∏á‡∏Å‡πå‡∏ä‡∏±‡∏ô‡∏≠‡∏±‡∏õ‡πÄ‡∏î‡∏ï‡∏ó‡∏±‡πâ‡∏á‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡πÅ‡∏•‡∏∞‡∏ï‡∏±‡∏ß‡πÄ‡∏•‡∏Ç‡∏ó‡∏±‡∏ô‡∏ó‡∏µ
		_on_h_slider_value_changed(0.5)

# --- ‡∏ü‡∏±‡∏á‡∏Å‡πå‡∏ä‡∏±‡∏ô‡∏õ‡∏£‡∏±‡∏ö‡πÄ‡∏™‡∏µ‡∏¢‡∏á (‡πÄ‡∏ä‡∏∑‡πà‡∏≠‡∏°‡∏Å‡∏±‡∏ö Signal: value_changed) ---
func _on_h_slider_value_changed(value: float) -> void:
	var bus_index = AudioServer.get_bus_index("Master")
	
	# 1. ‡∏õ‡∏£‡∏±‡∏ö‡∏£‡∏∞‡∏î‡∏±‡∏ö‡πÄ‡∏™‡∏µ‡∏¢‡∏á (‡πÇ‡∏Ñ‡πâ‡∏î‡πÄ‡∏î‡∏¥‡∏°)
	if value <= 0.01:
		AudioServer.set_bus_mute(bus_index, true)
	else:
		AudioServer.set_bus_mute(bus_index, false)
		AudioServer.set_bus_volume_db(bus_index, linear_to_db(value))
	
	# üü¢ 2. ‡πÅ‡∏™‡∏î‡∏á‡∏ï‡∏±‡∏ß‡πÄ‡∏•‡∏Ç‡πÄ‡∏õ‡∏≠‡∏£‡πå‡πÄ‡∏ã‡πá‡∏ô‡∏ï‡πå (‡πÄ‡∏û‡∏¥‡πà‡∏°‡∏ö‡∏£‡∏£‡∏ó‡∏±‡∏î‡∏ô‡∏µ‡πâ‡∏Ñ‡∏£‡∏±‡∏ö)
	# ‡πÄ‡∏£‡∏≤‡πÄ‡∏≠‡∏≤‡∏Ñ‡πà‡∏≤ 0-1 ‡∏°‡∏≤‡∏Ñ‡∏π‡∏ì 100 ‡πÅ‡∏•‡∏∞‡πÉ‡∏ä‡πâ int() ‡πÄ‡∏û‡∏∑‡πà‡∏≠‡∏ï‡∏±‡∏î‡∏ó‡∏®‡∏ô‡∏¥‡∏¢‡∏°‡∏ó‡∏¥‡πâ‡∏á
	percent_label.text = str(int(value * 100)) + "%"
	
	# 3. ‡πÄ‡∏•‡πà‡∏ô‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡∏ï‡∏¥‡πä‡∏Å (‡πÇ‡∏Ñ‡πâ‡∏î‡πÄ‡∏î‡∏¥‡∏°)
	if audio_click and not audio_click.playing:
		audio_click.pitch_scale = randf_range(0.9, 1.1)
		audio_click.play()

func _on_button_pressed() -> void: # ‡∏õ‡∏∏‡πà‡∏° Start
	print("‡πÄ‡∏£‡∏¥‡πà‡∏°‡πÄ‡∏Å‡∏°...")
	play_click_and_wait()
	get_tree().change_scene_to_file("res://scene/how_to_play.tscn")

func _on_button_2_pressed() -> void: # ‡∏õ‡∏∏‡πà‡∏° Option
	play_click_sound()
	main_buttons.visible = false
	options_panel.visible = true

func _on_button_3_pressed() -> void: # ‡∏õ‡∏∏‡πà‡∏° Exit
	play_click_and_wait()
	get_tree().quit()

func _on_button_4_pressed() -> void: # ‡∏õ‡∏∏‡πà‡∏° Back (‡πÉ‡∏ô‡∏´‡∏ô‡πâ‡∏≤ Option)
	play_click_sound()
	options_panel.visible = false
	main_buttons.visible = true

# --- ‡∏ü‡∏±‡∏á‡∏Å‡πå‡∏ä‡∏±‡∏ô‡πÄ‡∏™‡∏£‡∏¥‡∏°‡∏™‡∏≥‡∏´‡∏£‡∏±‡∏ö‡πÄ‡∏™‡∏µ‡∏¢‡∏á‡∏õ‡∏∏‡πà‡∏° ---
func play_click_sound():
	if audio_click:
		audio_click.play()

func play_click_and_wait():
	if audio_click:
		audio_click.play()
		await get_tree().create_timer(0.2).timeout
